--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
       <div class="main__wrapper_items">
         <div class="item__wrapper_titel">
           <h2>What is Frontend Mentor, and how will it help me?</h2>
-          <img src="./assets/images/icon-plus.svg" alt="" class="img_plus" />
+          <img
+            src="./assets/images/icon-plus.svg"
+            alt=""
+            class="img_plus"
+            id="plus_1"
+          />
         </div>
-        <p class="items active">
+        <p class="items" id="item_1">
           Frontend Mentor offers realistic coding challenges to help developers
           improve their frontend coding skills with projects in HTML, CSS, and
           JavaScript. It's suitable for all levels and ideal for portfolio
@@ -49,9 +54,14 @@
       <div class="main__wrapper_items">
         <div class="item__wrapper_titel">
           <h2>Is Frontend Mentor free?</h2>
-          <img src="./assets/images/icon-plus.svg" alt="" class="img_plus" />
+          <img
+            src="./assets/images/icon-plus.svg"
+            alt=""
+            class="img_plus"
+            id="plus_2"
+          />
         </div>
-        <p class="items">
+        <p class="items" id="item_2">
           Yes, Frontend Mentor offers both free and premium coding challenges,
           with the free option providing access to a range of projects suitable
           for all skill levels.
@@ -60,9 +70,14 @@
       <div class="main__wrapper_items">
         <div class="item__wrapper_titel">
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-          <img src="./assets/images/icon-plus.svg" alt="" class="img_plus" />
+          <img
+            src="./assets/images/icon-plus.svg"
+            alt=""
+            class="img_plus"
+            id="plus_3"
+          />
         </div>
-        <p class="items">
+        <p class="items" id="item_3">
           Yes, you can use projects completed on Frontend Mentor in your
           portfolio. It's an excellent way to showcase your skills to potential
           employers!
@@ -73,9 +88,14 @@
           <h2>
             How can I get help if I'm stuck on a Frontend Mentor challenge?
           </h2>
-          <img src="./assets/images/icon-plus.svg" alt="" class="img_plus" />
+          <img
+            src="./assets/images/icon-plus.svg"
+            alt=""
+            class="img_plus"
+            id="plus_4"
+          />
         </div>
-        <p class="items last_item">
+        <p class="items last_item" id="item_4">
           The best place to get help is inside Frontend Mentor's Discord
           community. There's a help channel where you can ask questions and seek
           support from other community members.
